# aiframework

./: .cursorrules  .env.example  .gitignore  AGENTS.md  AUTOMATION-PLAYBOOK-TEMPLATE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SETUP-DEV.md  STATUS.md  discover.sh  generate.sh  install.sh  run.sh  verify.sh
.claude/: settings.json
.githooks/: pre-commit  pre-commit-SKIPPED.md  pre-push
.github/: copilot-instructions.md
docs/: KNOWN_GAPS.md  README.md  ecosystem.html  index.html
lib/: config.sh
rust/: Cargo.toml  session-start-hook.sh
rust/.github/workflows/: release.yml
rust/src/: cli.rs  config.rs  lib.rs  main.rs  telemetry.rs  ui.rs
rust/src/generator/: agents_md.rs  ci.rs  claude_md.rs  cursorrules.rs  docs.rs  hooks.rs  mod.rs  report.rs  rules.rs  sheal_gen.rs  skills.rs  tracking.rs  vault.rs  vault_ingest.rs  wiki_graph.rs
rust/src/indexer/: data.rs  graph.rs  metrics.rs  mod.rs  parse.rs  registry.rs
rust/src/indexer/parsers/: bash.rs  csharp.rs  elixir.rs  go.rs  java.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  swift.rs  ts_bash.rs  ts_csharp.rs  ts_elixir.rs  ts_go.rs  ts_java.rs  ts_php.rs  ts_python.rs  ts_ruby.rs  ts_rust.rs  ts_swift.rs  ts_typescript.rs  typescript.rs
rust/src/mcp/: mod.rs
rust/src/scanner/: archetype.rs  ci.rs  code_index.rs  commands.rs  domain.rs  env.rs  identity.rs  mod.rs  quality.rs  sheal.rs  skill_suggest.rs  stack.rs  structure.rs  user_context.rs
rust/src/validator/: mod.rs
rust/tests/: data_test.rs  generator_test.rs  indexer_test.rs  scanner_test.rs
(+307 files in other folders)
