[package]
name = "aiframework"
version = "2.0.0-alpha.1"
edition = "2021"
rust-version = "1.75"
description = "Make Claude Code understand your project instantly"
license = "MIT"
repository = "https://github.com/evergonlabs/aiframework"
categories = ["command-line-utilities", "development-tools"]
keywords = ["claude-code", "ai", "developer-tools", "code-analysis"]

[lib]
name = "aiframework"
path = "src/lib.rs"

[[bin]]
name = "aiframework"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rayon = "1"
walkdir = "2"
ignore = "0.4"

# Tree-sitter core + grammars (added per-language as we port from regex)
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-bash = "0.23"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
